--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-4.48MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.55MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.17MB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.95MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.76MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇩🇪 德国-742.7KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
