--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.55MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.17MB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.75MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.33MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.78MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.59MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-1.76MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
