--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-4.75MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.33MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.78MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.59MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.76MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-742.7KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇦 加拿大-1.55MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇨🇳 中国-407.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-2.62MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-742.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
