--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.55MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇨🇳 中国-3.53MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.81MB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-12.37MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-407.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-2.62MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
